[tool.poetry]
name = "itslive"
homepage = "https://github.com/nasa-jpl/itslive-vortex"
version = "0.2.0"
description = "Python client for ITSLIVE gralcier velocity data"
authors = ["Luis Lopez <luis.lopez@nsidc.org>"]
license = "GNUL V3"

[tool.poetry.dependencies]
python = "^3.9"
zarr = ">=2.11"
s3fs = ">=2022.3"
xarray = ">=2022.3"
Shapely = ">=1.8"
pyproj = ">=3.3"
matplotlib = ">=3.6"
rich-click = ">=1.5"
plotext=">=0"
tabulate = ">=0.9.0"
pandas = "1.5.1"
requests = "^2.28.1"
earthaccess = ">=0.5.2"
pqdm = ">=0.2.0"

[tool.poetry.dev-dependencies]
autoflake = ">=1.3"
black = ">=22.3.0"
isort = ">=5.10.1"
pylint = "^2.15.5"
pytest = ">=7.1.2"
pytest-watch = ">=4.2.0"
mkdocs = ">=1.3.0"
mkdocs-material = ">=7.1,<9.0"
markdown-callouts = ">=0.2.0"
markdown-include = ">=0.6"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-jupyter = ">=0.19.0"
pymdown-extensions = ">=9.2"
pygments = ">=2.11.1"
responses = ">=0.14"
types-requests = ">=0.1"
types-setuptools = ">=0.1"
ipywidgets = ">=7.7.0"
widgetsnbextension = ">=3.6.0"
# for notebook integrations and documentation examples
jupyterlab = ">=3"
xarray = ">=2023.01"
ipympl = ">=0.1.0"
matplotlib = ">=3.3"
h5netcdf = ">=0.11"
dask = ">=2022.1"


[tool.poetry.scripts]
itslive-export = "itslive.cli.export:export"
itslive-plot = "itslive.cli.plot:plot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
