[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itslive"
version = "0.6.1"
description = "Python client for ITSLIVE glacier velocity data"
authors = [{name = "Luis Lopez", email = "luis.lopez@nsidc.org"}]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
homepage = "https://github.com/nasa-jpl/itslive-py"
dependencies = [
    "boto3>=1.28",
    "duckdb>=0.8",
    "earthaccess>=0.5",
    "h3>=4.0",
    "matplotlib>=3.6",
    "pandas>=1.5",
    "plotext>=0",
    "pyarrow>=10",
    "pqdm>=0.2",
    "pystac-client>=0.7",
    "pyproj>=3.4",
    "requests>=2.28",
    "rich-click>=1.5",
    "rustac>=0.6",
    "s3fs>=2022.3",
    "Shapely>=2.0",
    "tabulate>=0.9",
    "xarray>=2022.6",
    "zarr>=2.12",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "pre-commit>=3.0",
    "pytest>=7.1.2",
    "pytest-cov>=4.0",
    "pytest-watch>=4.2.0",
    "responses>=0.14",
    "ruff>=0.1.0",
    "types-requests>=0.1",
    "types-setuptools>=0.1",
]
docs = [
    "markdown-callouts>=0.4",
    "markdown-include>=0.6",
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "pygments>=2.11",
    "pymdown-extensions>=9.2",
]

[project.scripts]
itslive-export = "itslive.cli.export:export"
itslive-plot = "itslive.cli.plot:plot"
itslive-search = "itslive.cli.search:search"

[tool.hatch.build.targets.wheel]
packages = ["itslive"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require live network access (deselect with '-m not integration')",
    "unit: marks fast, offline unit tests",
]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["itslive"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bumpversion]
current_version = "0.6.1"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "chore: bump version from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
